--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ hex = "0.4.3"
 rand = "0.8.5"
 rand_core = "0.6.4"
 toncenter = "0.1.0"
+tokio = "1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
