--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "anychain-ton"
-description = "A Rust library for Ton-focused cryptocurrency wallets, enabling seamless transactions on the Solana blockchain"
-version = "0.1.5"
+description = "A Rust library for Ton-focused cryptocurrency wallets, enabling seamless transactions on the Ton blockchain"
+version = "0.1.6"
 keywords = ["ton", "blockchain", "cryptocurrency", "wallet", "transactions"]
 authors = ["Shawndslee", "cregis.com"]
 edition = "2021"
@@ -21,8 +21,6 @@ crc16 = "0.4.0"
 hex = "0.4.3"
 rand = "0.8.5"
 rand_core = "0.6.4"
-toncenter = "0.1.0"
-tokio = "1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
