--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "anychain-ton"
 description = "A Rust library for Ton-focused cryptocurrency wallets, enabling seamless transactions on the Ton blockchain"
-version = "0.1.6"
+version = "0.1.7"
 keywords = ["ton", "blockchain", "cryptocurrency", "wallet", "transactions"]
 authors = ["Shawndslee", "cregis.com"]
 edition = "2021"
@@ -15,7 +15,7 @@ tonlib-core-anychain = { version = "0.19.3" }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 num-bigint = { version = "0.4", features = ["serde"] }
 nacl = "0.5.3"
-ed25519-dalek = "=1.0.1"
+ed25519-dalek = { version = "2.1.1", features = ["hazmat"] }
 base64 = "0.22.1"
 crc16 = "0.4.0"
 hex = "0.4.3"
@@ -26,3 +26,4 @@ rand_core = "0.6.4"
 tokio = { version = "1", features = ["full"] }
 toncenter = "0.1.0"
 num-bigint = { version = "0.4", features = ["serde"] }
+sha2 = { version = "0.10.8" }
