--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anychain-core = { version = "0.1.6" }
 tonlib-core-anychain = { version = "0.19.3" }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 num-bigint = { version = "0.4", features = ["serde"] }
+num-traits = { version = "0.2" }
 nacl = "0.5.3"
 ed25519-dalek = { version = "2.1.1", features = ["hazmat"] }
 base64 = "0.22.1"
