--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "anychain-ton"
 description = "A Rust library for Ton-focused cryptocurrency wallets, enabling seamless transactions on the Ton blockchain"
-version = "0.1.8"
+version = "0.1.9"
 keywords = ["ton", "blockchain", "cryptocurrency", "wallet", "transactions"]
 authors = ["Shawndslee", "cregis.com"]
 edition = "2021"
@@ -16,7 +16,7 @@ serde = { version = "1.0", default-features = false, features = ["alloc", "deriv
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = { version = "0.2" }
 nacl = "0.5.3"
-ed25519-dalek = { version = "2.1.1", features = ["hazmat"] }
+ed25519-dalek = { version = "=1.0.1" }
 base64 = "0.22.1"
 crc16 = "0.4.0"
 hex = "0.4.3"
