--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,6 @@ rand_core = "0.6.4"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
-toncenter = "0.1.0"
+toncenter = { package = "toncenter-anychain", git = "https://github.com/loki-cmu/toncenter-rs", branch = "main" }
 num-bigint = { version = "0.4", features = ["serde"] }
 sha2 = { version = "0.10.8" }
