--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "anychain-ton"
 description = "A Rust library for Ton-focused cryptocurrency wallets, enabling seamless transactions on the Ton blockchain"
-version = "0.1.18"
+version = "0.1.19"
 keywords = ["ton", "blockchain", "wallet", "transactions"]
 categories = ["cryptography::cryptocurrencies"]
 authors = ["Shawndslee", "cregis.com"]
@@ -18,6 +18,8 @@ num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = { version = "0.2" }
 nacl = "0.5.3"
 ed25519-dalek = { version = "=1.0.1" }
+curve25519-dalek = { version = "4.1.3", features = ["group"] }
+group = "0.13.0"
 base64 = "0.22.1"
 crc16 = "0.4.0"
 hex = "0.4.3"
