--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,18 @@ tonlib-core-anychain = { version = "0.20.3" }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = { version = "0.2" }
-nacl = "0.5.3"
-ed25519-dalek = { version = "=1.0.1" }
+#nacl = "0.5.3"
+ed25519-dalek = { version = "2", features = ["hazmat"] }
 curve25519-dalek = { version = "4.1.3", features = ["group"] }
 group = "0.13.0"
 base64 = "0.22.1"
 crc16 = "0.4.0"
 hex = "0.4.3"
-rand = "0.8.5"
-rand_core = "0.6.4"
+#rand = "0.8.5"
+#rand_core = "0.6.4"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 toncenter = { package = "toncenter-anychain", git = "https://github.com/loki-cmu/toncenter-rs", branch = "main" }
 num-bigint = { version = "0.4", features = ["serde"] }
-sha2 = { version = "0.10.8" }
+#sha2 = { version = "0.10.8" }
