--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/0xcregis/anychain-ton"
 
 [dependencies]
-anychain-core = { version = "0.1.8" }
+#anychain-core = { version = "0.1.8" }
+anychain-core = { git = "https://github.com/0xcregis/anychain", branch = "382-fix-ed25519-dalek-101-deps" }
 tonlib-core-anychain = { version = "0.20.3" }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 num-bigint = { version = "0.4", features = ["serde"] }
